# feup-aeda

./: .gitattributes  .gitignore  README.md
aeda1920_fp01/: CMakeLists.txt  main.cpp
aeda1920_fp01/Tests/: parque.cpp  parque.h  tests.cpp
aeda1920_fp02/: CMakeLists.txt  main.cpp
aeda1920_fp02/Tests/: frota.cpp  frota.h  tests.cpp  veiculo.cpp  veiculo.h
aeda1920_fp02_extra/: CMakeLists.txt  main.cpp
aeda1920_fp02_extra/Tests/: animal.cpp  animal.h  tests.cpp  veterinario.cpp  veterinario.h  vets.txt  zoo.cpp  zoo.h
aeda1920_fp02_extra/__MACOSX/aeda1920_fp02_extra/Tests/: ._zoo.h
aeda1920_fp02_extra/aeda1920_fp02_extra/: CMakeLists.txt
aeda1920_fp02_extra/aeda1920_fp02_extra/Tests/: animal.cpp  animal.h  tests.cpp  zoo.cpp  zoo.h
aeda1920_fp02_extra/docs/html/: animal_8h_source.html  annotated.html  annotated_dup.js  class_animal-members.html  class_animal.html  class_animal.js  class_cao-members.html  class_cao.html  class_cao.js  class_morcego-members.html  class_morcego.html  class_morcego.js  class_veterinario-members.html  class_veterinario.html  class_veterinario.js  class_voador-members.html  class_voador.html  class_voador.js  class_zoo-members.html  class_zoo.html  class_zoo.js  classes.html  dir_33c78a012c8d08979f57a54a07694c46.html  dir_33c78a012c8d08979f57a54a07694c46.js  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js  veterinario_8h_source.html  zoo_8h_source.html
aeda1920_fp02_extra/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
aeda1920_fp02_extra/docs/rtf/: refman.rtf
aeda1920_fp03/: CMakeLists.txt  main.cpp
aeda1920_fp03/Tests/: grafo.h  tests.cpp
aeda1920_fp04/: CMakeLists.txt  main.cpp
aeda1920_fp04/Tests/: insertionSort.h  parque.cpp  parque.h  sequentialSearch.h  tests.cpp
aeda1920_fp05/: CMakeLists.txt  main.cpp
aeda1920_fp05/Tests/: crianca.cpp  crianca.h  jogo.cpp  jogo.h  tests.cpp
aeda1920_fp06/: CMakeLists.txt  main.cpp
aeda1920_fp06/Tests/: balcao.cpp  balcao.h  exceptions.h  stackExt.h  tests.cpp
aeda1920_fp07/: CMakeLists.txt  main.cpp
aeda1920_fp07/Tests/: binaryTree.h  bst.h  dicionario.cpp  dicionario.h  jogo.cpp  jogo.h  tests.cpp
aeda1920_fp09/: CMakeLists.txt  main.cpp
aeda1920_fp09/Tests/: aposta.cpp  aposta.h  jogador.cpp  jogador.h  tests.cpp
aeda1920_fp10/: CMakeLists.txt  main.cpp
aeda1920_fp10/Tests/: caixa.cpp  caixa.h  maquinaEmpacotar.cpp  maquinaEmpacotar.h  tests.cpp
aeda1920_fp11/: CMakeLists.txt  main.cpp
aeda1920_fp11/Tests/: disjointSets.cpp  disjointSets.h  maze.cpp  maze.h  tests.cpp
algorithms/sorting/: CMakeLists.txt  main.cpp  sorting_algs.h
tests/aeda1415_ci3_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1415_ci3_googleTest/Tests/: Supermercado.cpp  Supermercado.h  Test.cpp
tests/aeda1516_ci2_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1516_ci2_googleTest/Tests/: Test.cpp  pizzeria.cpp  pizzeria.h  sequentialSearch.h
tests/aeda1516_ci3_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1516_ci3_googleTest/Tests/: Restaurant.cpp  Table.cpp  Test.cpp
tests/aeda1617_ci2_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1617_ci2_googleTest/Tests/: AfterSalesService.cpp  Purchase.cpp  Test.cpp
tests/aeda1617_ci3_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1617_ci3_googleTest/Tests/: Book.cpp  Book.h  ReadingClub.cpp  ReadingClub.h  Test.cpp  User.cpp  User.h
tests/aeda1718_ci1/: main.cpp
tests/aeda1718_ci1/Tests/: Car.cpp  Car.h  Garage.h  Test.cpp
tests/aeda1718_ci1_googleTest/: CMakeLists.txt
tests/aeda1718_ci1_googleTest/Tests/: Car.h  Garage.h
tests/aeda1718_ci2_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1718_ci2_googleTest/Tests/: Doctor.cpp  Doctor.h  Hospital.cpp  Hospital.h  Test.cpp
tests/aeda1718_ci3_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1718_ci3_googleTest/Tests/: Expertize.cpp  Expertize.h  FEUPConsulting.cpp  FEUPConsulting.h  Project.cpp  Project.h  Student.cpp  Student.h  Test.cpp
tests/aeda1819_ci1_googleTest/: CMakeLists.txt
tests/aeda1819_ci1_googleTest/Tests/: Account.cpp  Account.h  Bank.cpp  Bank.h  BankOfficer.cpp  BankOfficer.h  tests.cpp
tests/aeda1819_ci2_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1819_ci2_googleTest/Tests/: CSimpleList.h  CStack.h  Kart.cpp  Kart.h  tests.cpp
tests/aeda1819_ci3_googleTest/: CMakeLists.txt  main.cpp
tests/aeda1819_ci3_googleTest/Tests/: BST.h  Client.cpp  Client.h  ClientRecord.cpp  ClientRecord.h  Property.cpp  Property.h  PropertyTypeItem.cpp  PropertyTypeItem.h  REAgency.cpp  REAgency.h  Test.cpp
